--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
     <title>Vite App</title>
   </head>
   <body>
-    <div class="bg-red-500">Hello</div>
+    <a href="/">Home Page</a>
+    <a href="/about">About Page</a>
     <div id="app"></div>
-    <script type="module" src="/main.js"></script>
+    <script type="module" src="./src/main.js"></script>
   </body>
 </html>
